# Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(tpb, 0.6.4)
AM_CONFIG_HEADER(config.h)

# additional options
AC_ARG_ENABLE(xosd,
	      [  --disable-xosd          Do not try to test for libxosd],
	      enable_xosd=no,
	      enable_xosd=yes)

# Checks for programs.
AC_PROG_CC                                                                      
AC_C_CONST                                                                      
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PATH_XTRA

LIBS="$LIBS $X_PRE_LIBS $X_LIBS  $X_EXTRA_LIBS -lm"
CFLAGS="$CFLAGS $X_CFLAGS -Wall"

# Checks for XOSD
if test "x$enable_xosd" = "xyes"; then
  AM_PATH_LIBXOSD(AC_DEFINE(HAVE_LIBXOSD))
  AM_CHECK_LIBXOSD
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h getopt.h stdio.h stdlib.h strings.h sys/stat.h sys/types.h unistd.h wait.h])

# Checks for libraries.
AC_CHECK_LIB([X11], [main])

# Languages which your application supports
ALL_LINGUAS="da de ru"
AM_GNU_GETTEXT
                                                                                
AC_OUTPUT([
	   Makefile
	   src/Makefile
	   man/Makefile
	   doc/Makefile
	   intl/Makefile
	   po/Makefile.in
	 ])
